--- a/assets/s1.css
+++ b/assets/s1.css
@@ -191,7 +191,7 @@ html {
 body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
-  font-weight: 400;
+  font-weight: 300;
   font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
     sans-serif;
   color: rgb(50, 50, 50);
@@ -207,10 +207,11 @@ h5,
 h6 {
   margin-top: 0;
   margin-bottom: 0;
-  font-weight: 300;
+  /* font-weight: 300; */
 }
 h1 {
   font-size: 4.5rem;
+  font-weight: 700; 
   line-height: 1.2;
   letter-spacing: -0.1rem;
   margin-bottom: 2rem;
