--- a/assets/styles.css
+++ b/assets/styles.css
@@ -20,10 +20,14 @@ body {
 .pretty_container {
   border-radius: 5px;
   background-color: #f9f9f9;
+  border-color : #214084;
+  border-width : 0.3px;
+  border-style : solid;
   margin: 10px;
   padding: 15px;
   position: relative;
-  box-shadow: 2px 2px 2px lightgrey;
+  /* box-shadow: 2px 2px 2px lightgrey; */
+
 }
 
 .bare_container {
@@ -99,6 +103,9 @@ body {
 .mini_container {
   border-radius: 5px;
   background-color: #f9f9f9;
+  border-color : #214084;
+  border-width : 0.3px;
+  border-style : solid;
   margin: 10px;
   padding: 15px;
   position: relative;
