Aesthetic changes Round #5

--- a/assets/s1.css
+++ b/assets/s1.css
@@ -575,6 +575,10 @@ there.
   .container-display {
     display: flex;
   }
+
+  .tab {
+    border-radius: 15px;
+  }
   
   #casesAge,
   #controlsAge,
